--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,65 @@ body {
     line-height: 1.25;
     margin: 0;
 }
+
+*:focus {
+  outline: none;
+}
+
+input:focus::-webkit-input-placeholder {
+    opacity: 0;
+}
+
+input[type="text"] {
+  border: none;
+  background-color: #f6f6f6;
+  font-size: 19px;
+  text-align: center;
+  text-transform: capitalize;
+  caret-color: #808080;
+}
+
+@keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #808080;
+  }
+}
+
+@-moz-keyframes blink {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #808080;
+  }
+}
+
+@-webkit-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #808080;
+  }
+}
+
+@-ms-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #808080;
+  }
+}
+
+@-o-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #808080;
+  }
+}
